# TSN_B2B_Test

./: .gitignore
.cache/clangd/index/: RingBuffer.c.1C0AD6B709CB05C1.idx  RingBuffer.c.A3BDD735B3927F25.idx  RingBuffer.c.C2DDF5557F1A1E58.idx  RingBuffer.c.F044A69572D71C0F.idx  RingBuffer.h.16C895FC6A8FF64E.idx  RingBuffer.h.683C8FE501AF4049.idx  RingBuffer.h.6A9075BD8B8B04E1.idx  (+714 more)
application/: CMakeLists.txt  CMakeLists.txt.localized.bak
application/common/: multicore_common.h
application/hpm_sdk_localized_for_board/components/tsw_phy/: CMakeLists.txt
application/hpm_sdk_localized_for_board/components/tsw_phy/yt8531/: hpm_yt8531.h  hpm_yt8531_regs.h
application/hpm_sdk_localized_for_board/drivers/src/: hpm_tsw_drv.c
application/hpm_sdk_localized_for_board/soc/HPM6E00/ip/: hpm_tsw_regs.h
application/inc/: mac_table.h  tswLowLevel.h
application/multicore/core0/: CMakeLists.txt
application/multicore/core0/hpm_sdk_localized_for_board/components/tsw_phy/: hpm_tsw_phy_common.h
application/multicore/core0/hpm_sdk_localized_for_board/components/tsw_phy/yt8531/: CMakeLists.txt  hpm_yt8531.c
application/multicore/core0/hpm_sdk_localized_for_board/drivers/inc/: hpm_tsw_drv.h
application/multicore/core0/hpm_sdk_localized_for_board/drivers/src/: hpm_pdm_drv.c
application/multicore/core0/inc/App/: data_u.h
application/multicore/core0/inc/Bsp/: RingBuffer.h  base.h  bsp_gptmr.h  bsp_mchtmr.h  tswLowLevel.h
application/multicore/core0/src/: main.c
application/multicore/core0/src/App/: data_u.c
application/multicore/core0/src/Bsp/: RingBuffer.c  bsp_gptmr.c  bsp_mchtmr.c  tswLowLevel.c
application/multicore/core1/: CMakeLists.txt
application/multicore/core1/src/: main.c
application/src/: mac_table.c  tswLowLevel.c
application_board_flash_xip_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
application_board_flash_xip_debug/build_tmp/: cmake_install.cmake
application_board_flash_xip_debug/iar_embedded_workbench/: tsn_frame.custom_argvars  tsn_frame.json
application_board_flash_xip_debug/output/: demo.asm  demo.elf  demo.map
application_board_flash_xip_debug/segger_embedded_studio/: tsn_frame.json
application_multicore_core0_board_flash_xip_debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
application_multicore_core0_board_flash_xip_debug/build_tmp/: cmake_install.cmake
application_multicore_core0_board_flash_xip_debug/iar_embedded_workbench/: tsn_frame.custom_argvars  tsn_frame.ewp  tsn_frame.eww  tsn_frame.json
application_multicore_core0_board_flash_xip_debug/segger_embedded_studio/: tsn_frame.emProject  tsn_frame.json
board/: CMakeLists.txt  board.c  board.h  board.yaml  pinmux.c  pinmux.h
(+33 files in other folders)
